[package]
name = "claudeye"
version = "0.1.0"
edition = "2021"
description = "Claude session monitor overlay for tmux"
license = "MIT"
repository = "https://github.com/maedana/claudeye"

[[bin]]
name = "claudeye"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
eframe = "0.30"
egui = "0.30"
regex = "1"

[dev-dependencies]
