[package]
name = "claudeye"
version = "0.2.1"
edition = "2024"
description = "Claude session monitor overlay for tmux"
license = "MIT"
repository = "https://github.com/maedana/claudeye"

[[bin]]
name = "claudeye"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.28"
eframe = "0.30"
egui = "0.30"
ratatui = "0.29"
regex = "1"

[dev-dependencies]
